<resources>
    <string name="app_name">DootApplication</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="sign_up">Sign Up</string>
    <string name="facebook">Facebook</string>
    <string name="sign_up_with_phone">Sign Up with Phone</string>
    <string name="google">Google</string>
    <string name="already_have_a_account">already have a account ?</string>
    <string name="your_web_client_id">820308703778-doq4veg5fqd4vjn0pmsra8oeoamehuil.apps.googleusercontent.com</string>
</resources>